tests/negative/runtime/string_index_equal_len/input.ci
void main() {
    string s = "abc";
    print(s[3] + "\n");
}
